--- a/styles/index.css
+++ b/styles/index.css
@@ -75,9 +75,18 @@ nav,
   transition: 100ms;
 }
 
-.nav-link:hover, .logo:hover, .social-button:hover {
+.nav-link:hover, .logo:hover, .social-button:hover 
+.nav-link:focus, .logo:focus, .social-button:focus{
   background-color: var(--secondary);
   color: var(--dark-secondary);
+}
+
+@media (hover: none){  
+  .nav-link:hover, .logo:hover, .social-button:hover 
+  .nav-link:focus, .logo:focus, .social-button:focus{
+    background-color: var(--dark-primary);
+    color: white;
+  }
 }
 
 .nav-link:active, .logo:active, .social-button:active {
@@ -88,11 +97,8 @@ nav,
 /* nav rules */
 nav {
   background-color: var(--dark-primary);
-  height: 64px;
+  height: 90px;
   width: 100%;
-  border: 5px solid var(--dark-secondary);
-  border-left: none;
-  border-right: none;
   padding: 0 5px 0 5px;
   box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.47);
   position: fixed;
@@ -199,6 +205,7 @@ main {
 #skills > p {
   text-align: center;
   margin: 35px 10px 30px 10px;
+  width: 100%;
 }
 
 #skills > p > b, #skills > p {
@@ -306,4 +313,41 @@ main {
   width: 40px;
   height: 40px;
   padding: 5px;
+}
+
+.fcc {
+  padding-left: 18px;
+  padding-right: 32px;
+}
+
+.social-media > .fcc {
+  padding-left: 3px;
+  padding-right: 7px;
+}
+
+@media (max-width: 600px) {
+  .selfie-photo {
+    width: 256px;
+    height: 256px;
+  }
+  
+  .top-description {
+    font-size: 22px;
+  }
+
+  .social-button {
+    font-size:50px;
+    width: 50px;
+    height: 50px;
+  }
+
+  .tech {
+    width: 70px;
+    height: 70px;
+  }
+
+  .techs > h2 {
+    font-size: 22px;
+    padding: 10px 0 10px 0;
+  }
 }
